[gd_scene load_steps=9 format=3 uid="uid://bg52sqflmggu0"]

[ext_resource type="Script" path="res://game/minigames/min_trasher/zstop.gd" id="1_ktljs"]
[ext_resource type="Texture2D" uid="uid://bp6xu82e2wrbh" path="res://icon.svg" id="2_f3b8d"]
[ext_resource type="Script" path="res://game/minigames/min_trasher/objects/icon_selection.gd" id="3_q2wah"]
[ext_resource type="FontFile" uid="uid://bdhq7gk7o2i57" path="res://resources/fonts/OpenSans-Regular.ttf" id="4_3nqlg"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_0lwe0"]
bounce = 0.17

[sub_resource type="BoxShape3D" id="BoxShape3D_hsana"]

[sub_resource type="BoxMesh" id="BoxMesh_ax40u"]

[sub_resource type="LabelSettings" id="LabelSettings_4m0kn"]
font = ExtResource("4_3nqlg")

[node name="Icon" type="Node3D"]

[node name="Rigidbody" type="RigidBody3D" parent="."]
collision_layer = 255
input_capture_on_drag = true
physics_material_override = SubResource("PhysicsMaterial_0lwe0")
can_sleep = false
angular_damp_mode = 1
script = ExtResource("1_ktljs")
metadata/_edit_lock_ = true

[node name="Collision" type="CollisionShape3D" parent="Rigidbody"]
shape = SubResource("BoxShape3D_hsana")
metadata/_edit_lock_ = true

[node name="Mesh" type="MeshInstance3D" parent="Rigidbody"]
mesh = SubResource("BoxMesh_ax40u")
skeleton = NodePath("../..")

[node name="Cell" type="Node3D" parent="Rigidbody"]
top_level = true
script = ExtResource("3_q2wah")

[node name="Selection" type="Sprite3D" parent="Rigidbody/Cell"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.686)
pixel_size = 0.0076
texture = ExtResource("2_f3b8d")

[node name="Label" type="Label" parent="Rigidbody/Cell"]
top_level = true
offset_right = 40.0
offset_bottom = 23.0
text = "Icon
line 2"
label_settings = SubResource("LabelSettings_4m0kn")
horizontal_alignment = 1

[connection signal="input_event" from="Rigidbody" to="Rigidbody/Cell" method="_on_rigidbody_input_event"]
[connection signal="mouse_entered" from="Rigidbody" to="Rigidbody/Cell" method="_on_rigidbody_mouse_entered"]
[connection signal="mouse_exited" from="Rigidbody" to="Rigidbody/Cell" method="_on_rigidbody_mouse_exited"]
